# boorudl

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  favorites.cpp  request.cpp  requester.cpp
include/boorudl/: batches.h  boorudl.h  comment.h  common.h  credentials.h  downloadable.h  downloader.h  enums.h  exporter.h  favorites.h  ids.h  options.h  page.h  post.h  request.h  requester.h  source.h  tags.h
src/: batches.cpp  comment.cpp  credentials.cpp  curl_handler.cpp  downloader.cpp  enums.cpp  favorites.cpp  ids.cpp  options.cpp  page.cpp  post.cpp  request.cpp  requester.cpp  source.cpp  tags.cpp
src/include/boorudl/: constants.h  curl_handler.h  utility.h
